# LeichFS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: fs_ops.cpp.57D38AEF535585B6.idx  fs_ops.hpp.A6FFD815A219559C.idx  main.cpp.51D67BA0A0F1FC81.idx
.github/workflows/: codeql.yml
Documentation/: DESIGN.md
include/: enc.hpp  util.hpp
include/enc/: aad.hpp  crypto.hpp  fhandler.hpp  header.hpp  params.hpp
include/fs/: core.hpp  dir.hpp  io.hpp  lc.hpp  meta.hpp  xattr.hpp
include/leichfs/: dispatch.hpp  init.hpp
lib/: util.cpp
lib/enc/: crypto.cpp  header.cpp
lib/fs/: core.cpp  dir.cpp  io.cpp  lc.cpp  meta.cpp  xattr.cpp
lib/leichfs/: dispatch.cpp  init.cpp
scripts/: smoke.sh
src/: enc.cpp  fs_ops.cpp  fs_ops.hpp  main.cpp  util.cpp
